# kubernetes-terraform-example

./: .gitignore  .pre-commit-config.yaml  .terraform.lock.hcl  .tool-versions  LICENSE  README.md  main.tf  package-lock.json
main/: .terraform.lock.hcl  main.tf  variables.tf
modules/cronjobs/: main.tf  variables.tf
modules/debug-pod/: README.md  main.tf  variable.tf
modules/dynamodb/: README.md  main.tf  variables.tf
modules/express-example/: README.md  main.tf  variables.tf  versions.tf
modules/express-example/backend/: Dockerfile  app.js  package-lock.json  package.json
modules/express-example/backend/routes/: eball.js  index.js  users.js
modules/fastapi-example/: README.md  main.tf  variables.tf  versions.tf
modules/fastapi-example/backend/: Dockerfile  pyproject.toml
modules/fastapi-example/backend/api/: eight_ball.py  main.py
modules/go-example/: README.md  main.tf  variables.tf
modules/go-example/backend/: Dockerfile  go.mod  main.go
modules/go-example/backend/api/: api.go
modules/ingress-example/: README.md  main.tf  variables.tf
modules/kotlin-example/: README.md  main.tf  variables.tf
modules/kotlin-example/backend/: Dockerfile  build.gradle.kts  gradle.properties  settings.gradle.kts
modules/nginx-example/: README.md  main.tf  variables.tf
modules/persistent-volume-example/: README.md  main.tf  variables.tf  working_claim.sh  working_claim.yml
modules/portainer/: README.md  main.tf  variables.tf
modules/postgresql/: README.md  main.tf  variables.tf
modules/variable-example/: README.md  main.tf  variable.tf
(+5 files in other folders)
