[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Paul Wong",email = "paul@jaiken.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types (==0.6.0)",
    "anyio (==3.7.1)",
    "click (==8.1.7)",
    "fastapi (==0.104.1)",
    "h11 (==0.14.0)",
    "httptools (==0.6.1)",
    "idna (==3.6)",
    "pydantic (==2.5.2)",
    "pydantic-core (==2.14.5)",
    "python-dotenv (==1.0.0)",
    "pyyaml (==6.0.1)",
    "sniffio (==1.3.0)",
    "starlette (==0.27.0)",
    "typing-extensions (==4.8.0)",
    "uvicorn (==0.24.0.post1)",
    "uvloop (==0.19.0)",
    "watchfiles (==0.21.0)",
    "websockets (==12.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
